Added: AppSetting service

--- a/src/RemotePythonExecution/appsettings.json
+++ b/src/RemotePythonExecution/appsettings.json
@@ -36,5 +36,24 @@
         "Args": { "maximumCollectionCount": 10 }
       }
     ]
+  },
+
+  "AppSettingsOptions": {
+    "PythonPaths": {
+      "InterpreterPath": {
+        "Windows": "C:\\Users\\Professional\\Downloads\\python-3.13.0-embed-amd64\\python.exe",
+        "Linux": ""
+      },
+
+      "WorkingDirrectoryPath": {
+        "Windows": "C:\\Users\\Professional\\Downloads\\python-3.13.0-embed-amd64\\",
+        "Linux": ""
+      }
+    },
+
+    "SourceCodeSavePaths": {
+      "Windows": "C:\\Users\\Professional\\Downloads\\python-3.13.0-embed-amd64\\test2.py",
+      "Linux": ""
+    }
   }
 }
