Added paths for linux in settings

--- a/src/RemotePythonExecution/appsettings.json
+++ b/src/RemotePythonExecution/appsettings.json
@@ -42,18 +42,18 @@
     "PythonPaths": {
       "InterpreterPath": {
         "Windows": "C:\\Users\\Professional\\Downloads\\python-3.13.0-embed-amd64\\python.exe",
-        "Linux": ""
+        "Linux": "/home/adam/Venv/pre-default/bin/python3.9"
       },
 
       "WorkingDirrectoryPath": {
         "Windows": "C:\\Users\\Professional\\Downloads\\python-3.13.0-embed-amd64\\",
-        "Linux": ""
+        "Linux": "/home/adam/adam"
       }
     },
 
     "SourceCodeSavePaths": {
       "Windows": "C:\\Users\\Professional\\Downloads\\python-3.13.0-embed-amd64\\test2.py",
-      "Linux": ""
+      "Linux": "/home/adam/adam/remote_python.py"
     }
   }
 }
