--- a/src/RemotePythonExecution.Interface/RemotePythonExecution.Interface.csproj
+++ b/src/RemotePythonExecution.Interface/RemotePythonExecution.Interface.csproj
@@ -12,15 +12,15 @@
   <ItemGroup>
     <PackageReference Include="AdamServices.Extensions.DefaultArgumets" Version="0.0.4" />
     <PackageReference Include="AdamServices.Extensions.ServiceFileCreator" Version="0.1.8" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.3" />
-    <PackageReference Include="Serilog" Version="4.2.0" />
+    <PackageReference Include="CavemanTcp" Version="2.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.5" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.1" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
-    <PackageReference Include="Tcp.NET.Server" Version="7.0.26" />
   </ItemGroup>
 </Project>
