--- a/src/RemotePythonExecution.Interface/RemotePythonExecution.Interface.csproj
+++ b/src/RemotePythonExecution.Interface/RemotePythonExecution.Interface.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="RemotePythonExecutionServiceDependency\" />
+  </ItemGroup>
 </Project>
