--- a/src/RemotePythonExecution/appsettings.json
+++ b/src/RemotePythonExecution/appsettings.json
@@ -2,7 +2,7 @@
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
-      "Default": "Verbose",
+      "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
         "System": "Warning"
@@ -54,6 +54,13 @@
     "SourceCodeSavePaths": {
       "Windows": "C:\\Users\\Professional\\Downloads\\python-3.13.0-embed-amd64\\test2.py",
       "Linux": "/home/adam/adam/remote_python.py"
+    },
+
+    "ServerSettings": {
+      /* Specify the ip interface on which the server will run. To listen to all interfaces, specify 0.0.0.0 or leave the field empty. */
+      "Ip": "",
+      /* Specify the port on which the server will be running. The default port is 19000 */
+      "Port": 19000
     }
   }
 }
