--- a/src/RemotePythonExecution/appsettings.json
+++ b/src/RemotePythonExecution/appsettings.json
@@ -2,7 +2,7 @@
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Override": {
         "Microsoft": "Warning",
         "System": "Warning"
@@ -38,7 +38,7 @@
     ]
   },
 
-  "AppSettingsOptions": {
+  "AppSettings": {
     "PythonPaths": {
       "InterpreterPath": {
         "Windows": "C:\\Users\\Professional\\Downloads\\python-3.13.0-embed-amd64\\python.exe",
@@ -51,7 +51,7 @@
       }
     },
 
-    "SourceCodeSavePaths": {
+    "SourceCodeSavePath": {
       "Windows": "C:\\Users\\Professional\\Downloads\\python-3.13.0-embed-amd64\\test2.py",
       "Linux": "/home/adam/adam/remote_python.py"
     },
