--- a/src/RemotePythonExecution/appsettings.json
+++ b/src/RemotePythonExecution/appsettings.json
@@ -38,6 +38,7 @@
     ]
   },
 
+  /* All settings supported to change without restarting the application (hot reload) */
   "AppSettings": {
     "PythonPaths": {
       "InterpreterPath": {
@@ -58,8 +59,10 @@
 
     "ServerSettings": {
       /* Specify the ip interface on which the server will run. To listen to all interfaces, specify 0.0.0.0 or leave the field empty. */
+      /* A change during code execution will result in disconnection all clients*/
       "Ip": "",
       /* Specify the port on which the server will be running. The default port is 19000 */
+      /* A change during code execution will result in disconnection all clients*/
       "Port": 19000
     }
   }
