--- a/src/RemotePythonExecution.Interface/RemotePythonExecution.Interface.csproj
+++ b/src/RemotePythonExecution.Interface/RemotePythonExecution.Interface.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="AdamServices.Extensions.DefaultArgumets" Version="0.0.4" />
     <PackageReference Include="AdamServices.Extensions.ServiceFileCreator" Version="0.1.8" />
+    <PackageReference Include="UTF.Unknown" Version="2.5.1" />
     <PackageReference Include="WatsonTcp" Version="6.0.9" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.5" />
